TagDataEditor (I)
- new class TagDataEditor
- usage in treecells
- gridcombobox for fontawesome icons
TODO: update all places when icon or color changes